<package format="2">
  <name>mujoco_ros_utils</name>
  <version>0.1.0</version>
  <description>
    ROS-based MuJoCo utilities
  </description>
  <maintainer email="m-murooka@aist.go.jp">Masaki Murooka</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/mujoco_ros_utils</url>
  <author>Masaki Murooka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>eigen_conversions</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <doc_depend>doxygen</doc_depend>
  <doc_depend>graphviz</doc_depend>
</package>
